# ProcessSpawner

./: .gitignore  README.md  build_project.sh
application/: CMakeLists.txt  build_script.sh  conanfile.txt  start_script.sh
application/child_process/: CMakeLists.txt  main.cpp
application/child_process/child_process/environments/: environments.h
application/child_process/child_process/src/api/controllers/: ChildInitController.h  ProcessManagerCommunicationController.h
application/child_process/child_process/src/api/server/: ChildProcessServer.h
application/child_process/child_process/src/application/providers/: GlobalConfigProvider.h
application/child_process/child_process/src/application/services/: GlobalConfig.h  ISchedulerService.h
application/child_process/child_process/src/application/utils/: ChildProcessParamsParser.h  ProcessParserUtils.h
application/child_process/child_process/src/infrastructure/commands/: ChildPingRequestCommand.h  ChildProcessCommandsFactory.h  CoreCommandCommunicationCommand.h  CoreQueryCommunicationCommand.h  SendPingMesasgeCommand.h
application/child_process/child_process/src/infrastructure/services/: ApplicationSingleton.h  CoreQueryParamsService.h  EndpointService.h  EventProviderSchedulerService.h  PingManagerSchedulerService.h
application/process_manager/: CMakeLists.txt  main.cpp
application/process_manager/process_manager/environments/: environments.h
application/process_manager/process_manager/src/api/controllers/: ChildPingController.h  ChildProcessCommunicationController.h  CoreCommunicationController.h  GenericControllersFactory.h  ProcessManagerController.h  ProcessQueryController.h
application/process_manager/process_manager/src/api/server/: ProcessManagerServer.h
application/process_manager/process_manager/src/application/providers/: ChildProcessConfigProvider.h  GlobalConfigProvider.h
application/process_manager/process_manager/src/application/services/: IAssociatedProcessesTerminatorService.h  IChildProcessHolderService.h  IChildProcessSpawnerService.h  IChildProcessTerminator.h  IPlatformIO.h  IPlatformProcessLauncher.h  IProcess.h  IProcessEnumerator.h  IProcessFactory.h  IProcessManager.h  IProcessTerminator.h
application/process_manager/process_manager/src/application/tools/: IProcessEnumerator.h  IProcessSpawner.h  IProcessTerminator.h
application/process_manager/process_manager/src/application/utils/: ChildProcessConfigProvider.h  ProcessManagerParamsParser.h
application/process_manager/process_manager/src/domain/models/: InputConfig.h  ProcessDetails.h  ProcessHandles.h  ProcessInfo.h  ProcessInstance.h
application/process_manager/process_manager/src/infrastructure/: ProcessManagerService.h  process_manager_service.h
application/process_manager/process_manager/src/infrastructure/commands/: ChildInitRequestCommand.h  ChildInitRequestCommand2.h  CoreCommandCommunicationCommand.h  InitChildProcessCommand.h  ProcessManagerCommandFactory.h  ProcessManagerInputRequestCommand.h
application/process_manager/process_manager/src/infrastructure/services/: ApplicationSingleton.h  AssociatedProcessesTerminatorService.h  ChildProcessHolderService.h  ChildProcessSpawnerService.h  ChildProcessTerminator.h  EndpointService.h  InitChildProcessService.h  LocalProcess.h  ProcessFactory.h  ProcessManager.h  ProcessManager2.h  ProcessManagerService.h  ProcessQueryService.h  UnixProcessEnumerator.h  UnixProcessTerminator.h
application/process_manager/process_manager/src/infrastructure/services/unix/: UnixPlatformIO.h  UnixPlatformProcessLauncher.h  UnixProcessManagerProvider.h
application/process_manager/process_manager/src/infrastructure/tools/: ProcessSpawner.h  UnixProcessEnumerator.h  UnixProcessSpawner.h  UnixProcessTerminator.h
application/shared/: CMakeLists.txt  conanfile.txt
application/shared/shared/src/api/controllers/: BaseGrpController.h  BaseGrpcMediatorController.h
application/shared/shared/src/application/providers/: ICurrentProcessInfoProvider.h
application/shared/shared/src/application/services/: BaseController.h  BaseSchedulerService.h  IBaseHolderService.h  IEndpointService.h  ILogger.h  ModelsMapperService.h  PathMacro.h
application/shared/shared/src/application/utils/: ModelsJsonConverter.h  RandomNumberGenerator.h
application/shared/shared/src/domain/models/: PingMessage.h  ProcessConfig.h  ProcessPing.h  SendMessage.h
application/shared/shared/src/domain/protos/: child_process_communication.proto  common.proto  communication.proto  core_communication.proto
application/shared/shared/src/infrastructure/commands/: GenericGrpcRequestSenderCommand.h  GenericRequestSenderCommand.h  RequestSenderCommand.h
application/shared/shared/src/infrastructure/providers/: BoostAcceptorProvider.h  UnixProcessInfoProvider.h
application/shared/shared/src/infrastructure/services/: AsyncServerService.h  DefaultLogger.h  EndpointService.h  RequestSenderService.h  SessionService.h
application/shared/shared/src/infrastructure/utils/: AsyncSession.h
application/shared/src/domain/protos/: communication.proto
client/: angular.json  build_script.sh  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
client/src/: styles.scss
client/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
client/src/environments/: environment.prod.ts
core/: build_script.sh  core.sln  start_script.sh
core/core/: Program.cs  appsettings.json  core.csproj  core.http  reset_db.sh
core/core/Properties/: launchSettings.json
core/core/Settings/: CoreExtension.cs  CustomService.cs  DbContext.cs  DependencyInjection.cs  RuntimeSeed.cs  TextPlainInputFormatter.cs
core/src/Authorization/Authorization.Application/: Authorization.Application.csproj
core/src/Authorization/Authorization.Domain/: Authorization.Domain.csproj
core/src/Authorization/Authorization.Infrastructure/: Authorization.Infrastructure.csproj  DependencyInjection.cs
core/src/ProcessSpawner/ProcessSpawner.Application/: ProcessSpawner.Application.csproj
(+362 files in other folders)
